RESOLVED FIXED 250609
Safari Content Blocker doesn't support :has() selector
https://bugs.webkit.org/show_bug.cgi?id=250609
Summary Safari Content Blocker doesn't support :has() selector
Brian Weinstein
Reported 2023-01-13 17:32:32 PST
.
Attachments
Brian Weinstein
Comment 1 2023-01-13 17:33:02 PST
Brian Weinstein
Comment 2 2023-01-13 17:35:51 PST
EWS
Comment 3 2023-01-18 23:47:41 PST
Committed 259068@main (355ce06ba535): <https://commits.webkit.org/259068@main> Reviewed commits have been landed. Closing PR #8649 and removing active labels.
Antti Koivisto
Comment 4 2023-02-09 05:54:46 PST
*** Bug 248868 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.