Cherry-pick 259068@main (355ce06ba535). https://bugs.webkit.org/show_bug.cgi?id=250609

Safari Content Blocker doesn't support :has() selector
    https://bugs.webkit.org/show_bug.cgi?id=250609
    rdar://103976010

    Reviewed by Antti Koivisto and Alex Christensen.

    When creating the CSSParsers for content blocker parsing and compilation, make sure to opt
    into hasPseudoClassEnabled so selectors like :has work. The places this was needed were:
    - ContentExtensionParser (for parsing the rules)
    - ContentExtension (for the global display none rules)
    - ContentExtensionStyleSheet (for the other display none rules)

    Also update the contentextensions css-display-none test to test this functionality.

    * Source/WebCore/contentextensions/ContentExtension.cpp:
    (WebCore::ContentExtensions::ContentExtension::compileGlobalDisplayNoneStyleSheet):
    * Source/WebCore/contentextensions/ContentExtensionParser.cpp:
    (WebCore::ContentExtensions::isValidCSSSelector):

    Canonical link: https://commits.webkit.org/259068@main